--- a/src/components/TreeStructure/TreeComponent.css
+++ b/src/components/TreeStructure/TreeComponent.css
@@ -4,7 +4,7 @@ ul {
 }
 
 ul > li {
-  padding: 2px;
+  padding: '2px';
 }
 
 .node {
@@ -13,5 +13,5 @@ ul > li {
 }
 
 .list-item {
-  padding-left: 5px;
+  padding-left: '5px';
 }
